define dependencies between files

--- a/css/gantt.css
+++ b/css/gantt.css
@@ -1,5 +1,5 @@
 .linkArrow {
- src:url(APP_PATH/css/img/linkArrow.png);
+ src:url(APP_PATH/linkArrow.png);
 }
 .gdfTable {
   table-layout: fixed;
@@ -219,7 +219,7 @@
   top:0px;
   position:absolute;
   width:18px;
-  background: url(APP_PATH/img/milestone.png) no-repeat;
+  background: url(APP_PATH/milestone.png) no-repeat;
   height:18px;
   display:none;
 }
@@ -240,7 +240,7 @@
 }
 
 .taskBox .layout.extDep{
-  background-image:url(APP_PATH/img/hasExternalDeps.png);
+  background-image:url(APP_PATH/hasExternalDeps.png);
 }
 
 
